criando pagina infosbar

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,5 @@
+@use 'components/infos_bar';
+@use 'components/buttons';
 @use 'hero'; 
 
 *{
@@ -6,6 +8,8 @@
     box-sizing: border-box;
     font-family: Roboto, sans-serif;
     color: #fff;
+    list-style: none; 
+    text-decoration: none;
 }
 
 .container{
