--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -1,3 +1,4 @@
+@use '../variables';
 .button{
     padding: 12px;
     font-size: 18px;
@@ -7,7 +8,7 @@
 
     &--primary{
         color: #fff; 
-        background-color: #4F2AC3;
+        background-color: variables.$purple; 
     }
 
     @media (max-width: 640px) {
