--- a/src/styles/components/_infos_bar.scss
+++ b/src/styles/components/_infos_bar.scss
@@ -1,12 +1,13 @@
+@use '../variables';
+
 .infos-bar{
-    
     padding: 16px 24px;
-    background-color: #fff;
+    background-color: variables.$textColor;
     display: flex;
     justify-content: space-between;
     &__infos{
         display: flex;
-        gap: 40px;
+        gap: 40px; 
 
         &__item{
             font-size: 14px;
