--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -3,7 +3,7 @@
 .hero{
     padding-top: 64px;
     padding-bottom: 100px;
-    background-image: url(../images/fundo.png);
+    background-image: url(../images/baloes.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
@@ -39,7 +39,7 @@
     @media (max-width: 640px) {
         padding: 40px 0;
         &__logo{
-            height: 40px;
+            height: 70px;
         }
         &__text{
             font-size: 24px;
