--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 @use 'hero'; 
 @use 'event';
 @use 'variables';
+@use 'rodape';
 
 *{
     margin: 0;
@@ -13,12 +14,16 @@
     list-style: none; 
     text-decoration: none;
 }
-
+body, html {
+    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden; /* Oculta a barra de rolagem horizontal */
+}
 .container{
     max-width: 960px;
     width: 100%;
     margin: 0 auto;
-
+    z-index: auto;
     @media (max-width: 640px) {
         max-width: 80%;
     }
