--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,7 +2,7 @@ $textColor: #fff;
 $secondaryTextColor:#000;
 
 $blue1:#1B6CA7;
-$blue2:#442BDB;
-$pink:#89223B;
-$yellow: #9C791D;
-$purple:#4F2AC3;
+$blue2:#8400ff;
+$pink:#00bbff;
+$yellow: #0abb42;
+$purple:#037419;
